--- a/package.json
+++ b/package.json
@@ -3,23 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.3.0",
     "@rematch/core": "^1.0.6",
+    "customize-cra": "^0.2.11",
+    "mobx": "^5.9.0",
+    "mobx-react-lite": "^1.1.0",
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.1",
+    "react-app-rewired": "^2.1.0",
     "react-dom": "^16.8.1",
-    "react-redux": "^6.0.0",
     "react-scripts": "2.1.3",
     "react-tooltip": "^3.9.2",
-    "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
